--- a/theme/scss/default.scss
+++ b/theme/scss/default.scss
@@ -138,7 +138,6 @@ slides > slide {
       position: absolute;
       bottom: $slide-top-bottom-padding / 2;
       left: $slide-left-right-padding;
-      background: url(../../images/google_developers_icon_128.png) no-repeat 0 50%;
       @include background-size($brand-small-icon-size $brand-small-icon-size);
       padding-left: $brand-small-icon-size + 10;
       height: $brand-small-icon-size;
@@ -1050,4 +1049,9 @@ aside.gdbar {
 
 .pull-right {
     float: right;
+}
+
+a.no-underline {
+    text-decoration: none;
+    border-bottom: none;
 }
