--- a/theme/scss/default.scss
+++ b/theme/scss/default.scss
@@ -1055,3 +1055,7 @@ a.no-underline {
     text-decoration: none;
     border-bottom: none;
 }
+
+img.bordered {
+    border: 1px solid rgb(196, 196, 196)
+}
